// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLIENT /w SSR: await dispatch(firstRoute()) -- no thunks etc called 1`] = `
Object {
  "kind": "load",
  "meta": Object {
    "location": Object {
      "current": Object {
        "index": 0,
        "kind": "load",
        "length": 1,
        "pathname": "/second",
        "payload": Object {},
        "type": "SECOND",
      },
      "history": Object {
        "entries": Array [
          Object {
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 0,
        "kind": "load",
        "length": 1,
      },
      "kind": "load",
      "prev": Object {
        "index": -1,
        "kind": "",
        "length": 0,
        "pathname": "",
        "payload": Object {},
        "type": "",
      },
    },
  },
  "payload": Object {},
  "type": "SECOND",
}
`;

exports[`CLIENT /w SSR: await dispatch(firstRoute()) -- no thunks etc called 2`] = `
Object {
  "entries": Array [
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/second",
      "search": "",
      "state": Object {},
      "url": "/second",
    },
  ],
  "hasSSR": undefined,
  "index": 0,
  "kind": "load",
  "length": 1,
  "pathname": "/second",
  "payload": Object {},
  "prev": Object {
    "index": -1,
    "kind": "",
    "length": 0,
    "pathname": "",
    "payload": Object {},
    "type": "",
  },
  "routesMap": Object {
    "@@redux-first-router/NOT_FOUND": Object {
      "path": "/not-found",
    },
    "FIRST": Object {
      "path": "/first",
    },
    "SECOND": Object {
      "beforeEnter": [Function],
      "path": "/second",
      "thunk": [Function],
    },
  },
  "type": "SECOND",
}
`;

exports[`SERVER: await dispatch(firstRoute()) -- redirected route not dispatched 1`] = `
Object {
  "kind": "redirect",
  "meta": Object {
    "location": Object {
      "kind": "redirect",
    },
  },
  "type": "THIRD",
}
`;

exports[`SERVER: await dispatch(firstRoute()) -- redirected route not dispatched 2`] = `
Object {
  "entries": Array [
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/second",
      "search": "",
      "state": Object {},
      "url": "/second",
    },
  ],
  "hasSSR": true,
  "index": 0,
  "kind": "load",
  "length": 1,
  "pathname": "/second",
  "payload": Object {},
  "prev": Object {
    "index": -1,
    "kind": "",
    "length": 0,
    "pathname": "",
    "payload": Object {},
    "type": "",
  },
  "routesMap": Object {
    "@@redux-first-router/NOT_FOUND": Object {
      "path": "/not-found",
    },
    "FIRST": Object {
      "path": "/first",
    },
    "SECOND": Object {
      "path": "/second",
      "thunk": [Function],
    },
    "THIRD": Object {
      "path": "/third",
      "thunk": [Function],
    },
  },
  "type": "SECOND",
}
`;
